--- a/html/index.html
+++ b/html/index.html
@@ -270,7 +270,7 @@
                                     <input type="email" name="email" placeholder="Your Email">
                                 </div>
                                 <div class="col-lg-9 py-3">
-                                    <input type="number" name="number" placeholder="Your Contact Number">
+                                    <input type="tel" name="number" placeholder="Your Contact Number">
                                 </div>
                                 <div class="col-lg-9 py-3">
                                     <textarea name="message" placeholder="Your Message" rows="5" cols="62"></textarea>
@@ -286,11 +286,29 @@
                                     </button>
                                 </div> 
                             </form><!-- End Form -->
-                        </div>
+                        </div><!-- End Contact-Form -->
                     </div><!-- End Row>-->
                 </div><!-- End Cover -->
             </div><!-- End Container-Flex -->
         </section><!-- End Conatct-->
+        <section class="projects">
+            <div class="slider container d-flex justify-content-center align-items-center mt-4">
+                <a class="slider-control project-control" id="prev-project"><i class="fa fa-angle-double-left"></i></a>
+                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
+                    <p class="py-2">Project 1</p>
+                </div>
+                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
+                    <p class="py-2">Project 2</p>
+                </div>
+                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
+                    <p class="py-2">Project 3</p>
+                </div>
+                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
+                    <p class="py-2">Project 4</p>
+                </div>
+                <a class="slider-control project-control" id="next-project"><i class="fa fa-angle-double-right"></i></a>
+            </div>
+        </section>
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex mt-4 pt-4">
@@ -329,3 +347,4 @@
 <script src="../js/script.js"></script>
 <script src="../js/show_hide.js"></script>
 <script src="../js/chatbot.js"></script>
+<script src="../js/slider.js"></script>
