--- a/html/index.html
+++ b/html/index.html
@@ -18,10 +18,10 @@
         <section class="main">
             <!-- Main Menu -->
             <div class="menu w-100">
-                <div class="row d-flex py-4 px-lg-5">
+                <div class="row d-flex align-items-center py-4 px-lg-5">
                     <!-- Logo -->
-                    <!-- <img class="logo" src="../pictures/logo.png"> -->
-                    <h1 class="text-logo col-lg-1 py-1">XWEN</h1>
+                    <img class="logo" src="../pictures/logo-white.png">
+                    <!-- <h1 class="text-logo col-lg-1 py-1">XWEN</h1> -->
                     <ul class="menu-items row py-2 mx-2">
                         <li class="menu-item mx-3"><a class="link" href=#>Home</a></li>
                         <li class="menu-item mx-3"><a class="link" href="#">About Us</a></li>
@@ -124,10 +124,10 @@
             </div><!-- End Row -->
             <div class="about-content row mt-4">
                 <div class="content col-lg-6">
-                    <img class="journey-image" src="../pictures/journey.png">
+                    <img class="journey-image" src="../pictures/journey1.png">
                 </div><!-- End Col-->
                 <div class="content col-lg-6">
-                    <p class="py-2">
+                    <p class="py-2 d-flex align-items-center">
                         Just like solving a captivating puzzle, our journey has been a thrilling adventure.<br>With each project, we navigate the complexities and intricacies, ensuring that every digital piece fits flawlessly.<br>From the first edge piece to the final touch, we collaborate with clients across diverse industries,<br>understanding their unique perspectives and crafting bespoke solutions.
                     </p>
                 </div><!-- End Col-->
@@ -136,21 +136,21 @@
                 <div class="services content row d-flex justify-content-center py-2">
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png">
-                        <h2 class="text-center py-2">Website Development</h2>
+                        <h2 class="text-center py-2"><br>Website Development</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
                     </div><!-- End Row-->
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ai.png">
-                        <h2 class="text-center py-2">AI & Machine Learning</h2>
+                        <h2 class="text-center py-2"><br>AI & Machine Learning</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
                     </div><!-- End Row-->
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ui.png">
-                        <h2 class="text-center py-2">UI/UX Development</h2>
+                        <h2 class="text-center py-2"><br>UI/UX Development</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div>
@@ -159,7 +159,7 @@
                 <div class="services content row d-flex justify-content-center">
                     <div class="service row d-flex justify-content-center align-items-center mx-3 mt-5">
                         <img class="service-image" src="../pictures/ecomm.png">
-                        <h2 class="text-center py-2">E-Commerce Solutions</h2>
+                        <h2 class="text-center py-2"><br>E-Commerce Solutions</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
@@ -216,24 +216,24 @@
         </section><!-- End About-Us -->
         <section class="techs">
            <h1 class="py-2 px-lg-5">Technologies We Use</h1>
-           <div class="container-flex d-flex justify-content-center py-4">
+           <div class="container-flex d-flex justify-content-center py-4 w-100">
              <div class="slider container-flex py-2">
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/django.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/python.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/node.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/react.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/html.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
+                <div class="slider-img col-lg-2">
                     <img src="../pictures/css.png">
                 </div>
              </div><!-- End Slider -->
