--- a/html/index.html
+++ b/html/index.html
@@ -136,21 +136,21 @@
                 <div class="services content row d-flex justify-content-center py-2">
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png">
-                        <h2 class="text-center py-2"><br>Website Development</h2>
+                        <h2 class="text-center py-2">Website Development</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
                     </div><!-- End Row-->
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ai.png">
-                        <h2 class="text-center py-2"><br>AI & Machine Learning</h2>
+                        <h2 class="text-center py-2">AI & Machine Learning</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
                     </div><!-- End Row-->
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ui.png">
-                        <h2 class="text-center py-2"><br>UI/UX Development</h2>
+                        <h2 class="text-center py-2">UI/UX Development</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div>
@@ -159,7 +159,7 @@
                 <div class="services content row d-flex justify-content-center">
                     <div class="service row d-flex justify-content-center align-items-center mx-3 mt-5">
                         <img class="service-image" src="../pictures/ecomm.png">
-                        <h2 class="text-center py-2"><br>E-Commerce Solutions</h2>
+                        <h2 class="text-center py-2">E-Commerce Solutions</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
