--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <title>XWEN</title>
 </head>
 
-<html>
+<html lang="en-us">
     <body>
         <section class="main">
             <!-- Main Menu -->
@@ -296,15 +296,27 @@
                 <a class="slider-control project-control" id="prev-project"><i class="fa fa-angle-double-left"></i></a>
                 <div class="project-box row justify-content-center align-items-center py-2 mx-3">
                     <p class="py-2">Project 1</p>
+                    <div class="row pb-2 d-flex align-items-center">
+                        <p>Project 1</p>
+                    </div>
                 </div>
                 <div class="project-box row justify-content-center align-items-center py-2 mx-3">
                     <p class="py-2">Project 2</p>
+                    <div class="row pb-2">
+                        <p>Project 1</p>
+                    </div>
                 </div>
                 <div class="project-box row justify-content-center align-items-center py-2 mx-3">
                     <p class="py-2">Project 3</p>
+                    <div class="row pb-2">
+                        <p>Project 1</p>
+                    </div>
                 </div>
                 <div class="project-box row justify-content-center align-items-center py-2 mx-3">
                     <p class="py-2">Project 4</p>
+                    <div class="row pb-2">
+                        <p>Project 1</p>
+                    </div>
                 </div>
                 <a class="slider-control project-control" id="next-project"><i class="fa fa-angle-double-right"></i></a>
             </div>
