Added projects and mad responsive

--- a/html/index.html
+++ b/html/index.html
@@ -243,7 +243,7 @@
             <div class="container-flex mt-4">
                 <div class="cover">
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="contact-info col-lg-4">
+                        <div class="contact-info col-lg-6">
                             <h1 class="text-light py-2 mt-4 px-lg-5">Contact Details</h1>
                             <div class="contact-box container mt-2 px-lg-5">
                                 <h3 class="text-light py-2">Email Address:</h3>
@@ -258,8 +258,8 @@
                                 <p class="text-light py-2">Karachi</p>
                             </div>
                         </div><!-- End Contact-info -->
-                        <div class="contact-form col-lg-8 px-4 py-4">
-                            <form class="row d-flex justify-content-center py-2" method="post">
+                        <div class="contact-form col-lg-6 py-4">
+                            <form class="row d-flex py-2" method="post">
                                 <div class="col-lg-9 py-2">
                                     <h1 class="text-light py-2">Navigate Your Questions to Us</h1>
                                 </div>
@@ -273,7 +273,7 @@
                                     <input type="tel" name="number" placeholder="Your Contact Number">
                                 </div>
                                 <div class="col-lg-9 py-3">
-                                    <textarea name="message" placeholder="Your Message" rows="5" cols="62"></textarea>
+                                    <textarea name="message" placeholder="Your Message" rows="5"></textarea>
                                 </div>
                                 <div class="col-lg-9 py-2">
                                     <button class="form-submit btn d-flex">
@@ -291,36 +291,45 @@
                 </div><!-- End Cover -->
             </div><!-- End Container-Flex -->
         </section><!-- End Conatct-->
-        <section class="projects">
-            <div class="slider container d-flex justify-content-center align-items-center mt-4">
+        <section class="projects mt-4">
+            <h1 class="text-center py-2 px-lg-5">Recent Projects</h1>
+            <div class="slider container-flex d-flex align-items-center mt-4 py-4">
                 <a class="slider-control project-control" id="prev-project"><i class="fa fa-angle-double-left"></i></a>
-                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
-                    <p class="py-2">Project 1</p>
-                    <div class="row pb-2 d-flex align-items-center">
-                        <p>Project 1</p>
+                <div class="project-box row align-items-center py-2">
+                    <img class="project-img" src="../projects/oracle.jpg">
+                    <img class="project-cover" src="../pictures/cover3.png">
+                    <div class="project-content col-lg-15">
+                        <h4 class="py-2 px-2">Oracle DB</h4>
+                        <p class="p-0 m-0 px-2">Accessing oracle DB and retreiving data to insert into koha API</p>
                     </div>
-                </div>
-                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
-                    <p class="py-2">Project 2</p>
-                    <div class="row pb-2">
-                        <p>Project 1</p>
+                </div><!-- End Project-Box -->
+                <div class="project-box row align-items-center py-2">
+                    <img class="project-img" src="../projects/tibco.png">
+                    <img class="project-cover" src="../pictures/cover3.png">
+                    <div class="project-content col-lg-15">
+                        <h4 class="py-2 px-2">Jasper Reports</h4>
+                        <p class="p-0 m-0 px-2">An interactive application to publish reports in JR server</p>
                     </div>
-                </div>
-                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
-                    <p class="py-2">Project 3</p>
-                    <div class="row pb-2">
-                        <p>Project 1</p>
+                </div><!-- End Project-Box -->
+                <div class="project-box row align-items-center py-2">
+                    <img class="project-img" src="../projects/bsk.jpeg">
+                    <img class="project-cover" src="../pictures/cover3.png">
+                    <div class="project-content col-lg-15">
+                        <h4 class="py-2 px-2">BSK</h4>
+                        <p class="p-0 m-0 px-2">A portfolio website to showcase BSK's technical experties</p>
                     </div>
-                </div>
-                <div class="project-box row justify-content-center align-items-center py-2 mx-3">
-                    <p class="py-2">Project 4</p>
-                    <div class="row pb-2">
-                        <p>Project 1</p>
+                </div><!-- End Project-Box -->
+                <div class="project-box row align-items-center py-2">
+                    <img class="project-img" src="../projects/zeenia.jpg">
+                    <img class="project-cover" src="../pictures/cover3.png">
+                    <div class="project-content col-lg-15">
+                        <h4 class="py-2 px-2">Zeenia Travels</h4>
+                        <p class="p-0 m-0 px-2">A touring agent helping you thorugh every step</p>
                     </div>
-                </div>
+                </div><!-- End Project-Box -->
                 <a class="slider-control project-control" id="next-project"><i class="fa fa-angle-double-right"></i></a>
-            </div>
-        </section>
+            </div><!-- End Slider -->
+        </section><!-- End Project -->
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex mt-4 pt-4">
