--- a/html/index.html
+++ b/html/index.html
@@ -285,45 +285,139 @@
                 </div><!-- End Cover -->
             </div><!-- End Container-Flex -->
         </section><!-- End Conatct-->
-        <section class="projects mt-4">
-            <h1 class="text-center py-2 px-lg-5">Recent Projects</h1>
-            <div class="slider container-flex d-flex align-items-center mt-4 py-4">
-                <a title="next" class="slider-control project-control" id="prev-project"><i class="fa fa-angle-double-left"></i></a>
-                <div class="project-box row align-items-center py-2">
-                    <img class="project-img" src="../projects/oracle.jpg" alt="oracle">
-                    <img class="project-cover" src="../pictures/cover3.png" alt="cover">
-                    <div class="project-content col-lg-15">
-                        <h4 class="py-2 px-2">Oracle DB</h4>
-                        <p class="p-0 m-0 px-2">Accessing oracle DB and retreiving data to insert into koha API</p>
-                    </div>
-                </div><!-- End Project-Box -->
-                <div class="project-box row align-items-center py-2">
-                    <img class="project-img" src="../projects/tibco.png" alt="tibco">
-                    <img class="project-cover" src="../pictures/cover3.png" alt="cover">
-                    <div class="project-content col-lg-15">
-                        <h4 class="py-2 px-2">Jasper Reports</h4>
-                        <p class="p-0 m-0 px-2">An interactive application to publish reports in JR server</p>
-                    </div>
-                </div><!-- End Project-Box -->
-                <div class="project-box row align-items-center py-2">
-                    <img class="project-img" src="../projects/bsk.jpeg" alt="bsk">
-                    <img class="project-cover" src="../pictures/cover3.png" alt="cover">
-                    <div class="project-content col-lg-15">
-                        <h4 class="py-2 px-2">BSK</h4>
-                        <p class="p-0 m-0 px-2">A portfolio website to showcase BSK's technical experties</p>
-                    </div>
-                </div><!-- End Project-Box -->
-                <div class="project-box row align-items-center py-2">
-                    <img class="project-img" src="../projects/zeenia.jpg" alt="zeenia">
-                    <img class="project-cover" src="../pictures/cover3.png" alt="cover">
-                    <div class="project-content col-lg-15">
-                        <h4 class="py-2 px-2">Zeenia Travels</h4>
-                        <p class="p-0 m-0 px-2">A touring agent helping you thorugh every step</p>
-                    </div>
-                </div><!-- End Project-Box -->
-                <a title="next" class="slider-control project-control" id="next-project"><i class="fa fa-angle-double-right"></i></a>
-            </div><!-- End Slider -->
-        </section><!-- End Project -->
+        <section class="projects">
+            <h1 class="py-4 px-lg-5">Our Projects</h1>
+            <div class="container">
+                <div class="row d-flex justify-content-center">
+                    <div class="project-box container" id="project-1">
+                        <img class="project-img" src="../projects/tibco.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">Jasper Reports Module</h3>
+                            <p class="py-2">
+                                A simple module allowing multiple users to execute reports and view them directly from their server.<br>
+                                The module handles authentication and routing making it easier for the end user to access jaspersoft software.  
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Module</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">Completed</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">HTML, CSS</p>
+                            <h3 class="py-2">Link:</h3>
+                            <p class="py-1">Unavailable</p>
+                        </div>
+                    </div><!-- End Project-Box-->
+                    <div class="project-box container" id="project-2">
+                        <img class="project-img" src="../projects/oracle.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">Oracle-Koha Bridge</h3>
+                            <p class="py-2">
+                               Retrieving data residing in oracle database and filterring out data to insert, update or list students.    
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Module</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">On Going</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">Node-JS, HTML, CSS</p>
+                            <h3 class="py-2">Link:</h3>
+                            <p class="py-1">Unavailable</p>
+                        </div>
+                    </div><!-- End Project-Box-->
+                </div><!-- End Row -->
+                <div class="row d-flex justify-content-center">
+                    <div class="project-box container" id="project-3">
+                        <img class="project-img" src="../projects/zeenia.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">Zeenia Travels</h3>
+                            <p class="py-2">
+                              Zeena travels, a touring agent website helping you select and plan for your next vacation or bussiness trips.
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Portfolio</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">Completed</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">Wordpress</p>
+                            <h3 class="py-2">Link:</h3>
+                            <a class="py-1" href="https://zeeniatravels.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                        </div>
+                    </div><!-- End Project-Box-->
+                    <div class="project-box container" id="project-4">
+                        <img class="project-img" src="../projects/bsk.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">BSK Portfolio</h3>
+                            <p class="py-2">
+                              A Protfolio website showcasing BSK's technical experties and service details
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Portfolio</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">Completed</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">HTML, CSS</p>
+                            <h3 class="py-2">Link:</h3>
+                            <a class="py-1" href="https://www.brisktechnologies.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                        </div>
+                    </div><!-- End Project-Box-->
+                </div><!-- End Row -->
+                <div class="row d-flex justify-content-center"> 
+                    <div class="project-box container" id="project-5">
+                        <img class="project-img" src="../projects/zbe.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">ZBE</h3>
+                            <p class="py-2">
+                                Portfolio website for zbe enterprises, a general trading enterprise. The portfolio
+                                shows details about their products and services  
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Portfolio</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">Completed</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">Wordpress</p>
+                            <h3 class="py-2">Link:</h3>
+                            <a class="py-1" href="https://zbe.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                        </div>
+                    </div><!-- End Project-Box-->
+                    <div class="project-box container" id="project-6">
+                        <img class="project-img" src="../projects/koha.png">
+                        <div class="project-toggle col-lg-12">
+                            <button class="porject-btn py-2"><i class="project-arrow fa fa-arrow-up"></i></button>
+                        </div>
+                        <div class="project-detail col-lg-12">
+                            <h3 class="py-2">Koha API Module</h3>
+                            <p class="py-2">
+                                Module to GET data from the koha web api, this module deals with authenticating users, routings andfiltering api response.
+                            </p>
+                            <h3 class="py-2">Category:</h3>
+                            <p class="py-1">Web Dev: Module</p>
+                            <h3 class="py-2">Status:</h3>
+                            <p class="py-1">Completed</p>
+                            <h3 class="py-2">Techs:</h3>
+                            <p class="py-1">PHP, HTML, CSS</p>
+                            <h3 class="py-2">Link:</h3>
+                            <p class="py-1">unavailable</a>
+                        </div>
+                    </div><!-- End Project-Box-->
+                </div><!-- End Row -->
+            </div><!-- End Container-Flex -->
+        </section>
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex mt-4 pt-4">
@@ -361,4 +455,4 @@
 <script src="../js/script.js"></script>
 <script src="../js/show_hide.js"></script>
 <script src="../js/chatbot.js"></script>
-<script src="../js/slider.js"></script>
+
