Added social links

--- a/html/index.html
+++ b/html/index.html
@@ -25,8 +25,7 @@
                     <ul class="menu-items row py-2 mx-2">
                         <li class="menu-item mx-3"><a title="home" class="link" href=#>Home</a></li>
                         <li class="menu-item mx-3"><a title="about" class="link" href="#about">About Us</a></li>
-                        <li class="menu-item mx-3"><a title="projects" class="link" href="#">Projects</a></li>
-                        <li class="menu-item mx-3"><a title="Our story" class="link" href="#">Our Story</a></li>
+                        <li class="menu-item mx-3"><a title="projects" class="link" href="#projects">Projects</a></li>
                     </ul><!-- End Menu-Items -->
                     <!-- Mobiile Menu -->
                     <ul class="mobile-menu-items py-2" id="mobile-menu">
@@ -35,15 +34,15 @@
                         <li class="menu-item p-1"><a title="projects" class="link" href="#">Projects</a></li>
                         <li class="menu-item p-1"><a title="Our story" class="link" href="#">Our Story</a></li>
                         <li class="menu-item d-flex align-items-center p-1 mt-2">
-                            <a title="fb" class="social-link d-flex justify-content-center" href="#"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                            <a title="inst" class="social-link d-flex justify-content-center" href="#"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                            <a title="fb" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                            <a title="inst" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"><i class="fa fa-instagram mx-1 p-1"></i></a>
                         </li>
                     </ul><!-- End Mobile-menu-Items -->
                     <!-- Hamburger Button -->
                     <a title="menu-button" class="menu-btn" href="#" id="ham-btn"><i class="fa fa-bars"></i></a>
                     <div class="social-icons row py-2">
-                        <a title="fb" class="social-link d-flex justify-content-center" href="#"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                        <a title="inst" class="social-link d-flex justify-content-center" href="#"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                        <a title="fb" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                        <a title="inst" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"><i class="fa fa-instagram mx-1 p-1"></i></a>
                     </div>
                 </div><!-- End Row -->
             </div><!-- End Menu -->
@@ -225,7 +224,7 @@
                     <img src="../pictures/react.png" alt="react">
                 </div>
                 <div class="slider-img col-lg-2">
-                    <img src="../pictures/html.png" alt="html">
+                    <img src="../pictures/wordpress.png" alt="wordpress">
                 </div>
                 <div class="slider-img col-lg-2">
                     <img src="../pictures/css.png" alt="css">
@@ -233,59 +232,7 @@
              </div><!-- End Slider -->
            </div><!-- End Container-FLex -->
         </section><!-- End Techs-->
-        <section class="contact">
-            <div class="container-flex mt-4">
-                <div class="cover">
-                    <div class="row d-flex justify-content-center align-items-center">
-                        <div class="contact-info col-lg-6">
-                            <h1 class="text-light py-2 mt-4 px-lg-5">Contact Details</h1>
-                            <div class="contact-box container mt-2 px-lg-5">
-                                <h3 class="text-light py-2">Email Address:</h3>
-                                <p class="text-light py-3">xwen151214@gmail.com</p>
-                            </div>
-                            <div class="contact-box container mt-2 px-lg-5">
-                                <h3 class="text-light py-2">Contact Number</h3>
-                                <p class="text-light py-2">0309-1225118</p>
-                            </div>
-                            <div class="contact-box container mt-2 px-lg-5">
-                                <h3 class="text-light py-2">Location:</h3>
-                                <p class="text-light py-2">Karachi</p>
-                            </div>
-                        </div><!-- End Contact-info -->
-                        <div class="contact-form col-lg-6 py-4">
-                            <form class="row d-flex py-2" method="post">
-                                <div class="col-lg-9 py-2">
-                                    <h1 class="text-light py-2">Navigate Your Questions to Us</h1>
-                                </div>
-                                <div class="col-lg-9 py-2">
-                                    <input type="text" name="name" placeholder="Your Name">
-                                </div>
-                                <div class="col-lg-9 py-2">
-                                    <input type="email" name="email" placeholder="Your Email">
-                                </div>
-                                <div class="col-lg-9 py-3">
-                                    <input type="tel" name="number" placeholder="Your Contact Number">
-                                </div>
-                                <div class="col-lg-9 py-3">
-                                    <textarea name="message" placeholder="Your Message" rows="5"></textarea>
-                                </div>
-                                <div class="col-lg-9 py-2">
-                                    <button class="form-submit btn d-flex">
-                                        <div class="col-lg-1 mr-4 px-0">
-                                            <i class="fa fa-envelope"></i>
-                                        </div>
-                                        <div class="col-lg-1 px-0">
-                                            Submit
-                                        </div>
-                                    </button>
-                                </div> 
-                            </form><!-- End Form -->
-                        </div><!-- End Contact-Form -->
-                    </div><!-- End Row>-->
-                </div><!-- End Cover -->
-            </div><!-- End Container-Flex -->
-        </section><!-- End Conatct-->
-        <section class="projects">
+        <section class="projects" id="projects">
             <h1 class="py-4 px-lg-5">Our Projects</h1>
             <div class="container">
                 <div class="row d-flex justify-content-center">
@@ -349,7 +296,7 @@
                             <h3 class="py-2">Techs:</h3>
                             <p class="py-1">Wordpress</p>
                             <h3 class="py-2">Link:</h3>
-                            <a class="py-1" href="https://zeeniatravels.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                            <a class="py-1" href="https://zeeniatravels.com/" target="_blank"><i class="fa fa-share-square"></i></a>
                         </div>
                     </div><!-- End Project-Box-->
                     <div class="project-box container" id="project-4">
@@ -417,23 +364,74 @@
                     </div><!-- End Project-Box-->
                 </div><!-- End Row -->
             </div><!-- End Container-Flex -->
-        </section>
+        </section><!-- End Projects -->
+        <section class="contact">
+            <div class="container-flex mt-4">
+                <div class="cover">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="contact-info col-lg-6">
+                            <h1 class="text-light py-2 mt-4 px-lg-5">Contact Details</h1>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Email Address:</h3>
+                                <p class="text-light py-3">xwen151214@gmail.com</p>
+                            </div>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Contact Number</h3>
+                                <p class="text-light py-2">0309-1225118</p>
+                            </div>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Location:</h3>
+                                <p class="text-light py-2">Karachi</p>
+                            </div>
+                        </div><!-- End Contact-info -->
+                        <div class="contact-form col-lg-6 py-4">
+                            <form class="row d-flex py-2" method="post">
+                                <div class="col-lg-9 py-2">
+                                    <h1 class="text-light py-2">Navigate Your Questions to Us</h1>
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <input type="text" name="name" placeholder="Your Name" id="name">
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <input type="email" name="email" placeholder="Your Email" id="email">
+                                </div>
+                                <div class="col-lg-9 py-3">
+                                    <input type="tel" name="number" placeholder="Your Contact Number" id="number">
+                                </div>
+                                <div class="col-lg-9 py-3">
+                                    <textarea name="message" placeholder="Your Message" rows="5" id="message"></textarea>
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <button class="form-submit btn d-flex" id="form-btn" onclick="send_form()">
+                                        <div class="col-lg-1 mr-4 px-0">
+                                            <i class="fa fa-envelope"></i>
+                                        </div>
+                                        <div class="col-lg-1 px-0">
+                                            Submit
+                                        </div>
+                                    </button>
+                                </div> 
+                            </form><!-- End Form -->
+                        </div><!-- End Contact-Form -->
+                    </div><!-- End Row>-->
+                </div><!-- End Cover -->
+            </div><!-- End Container-Flex -->
+        </section><!-- End Conatct-->
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex mt-4 pt-4">
             <div class="container-flex">
                 <div class="row d-flex justify-content-center align-items-center">
                   <ul class="quick-links d-flex justify-content-center">
-                    <li class="py-2"><a title="home" class="link" href="#">Home</a></li>
-                    <li class="py-2"><a title="about" class="link" href="#">About Us</a></li>
-                    <li class="py-2"><a title="projects" class="link" href="#">Projects</a></li>
-                    <li class="py-2"><a title="blogs" class="link" href="#">Blogs</a></li>
+                    <li class="py-2"><a title="home" class="link" href="/html/index.html">Home</a></li>
+                    <li class="py-2"><a title="about" class="link" href="#about">About Us</a></li>
+                    <li class="py-2"><a title="projects" class="link" href="#projects">Projects</a></li>
                   </ul>
                 </div><!-- End Row -->
                 <div class="row d-flex justify-content-center py-2">
-                    <a title="fb" class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-facebook"></i></a>
-                    <a title="inst" class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-instagram"></i></a>
-                    <a title="lind" class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-linkedin"></i></a>
+                    <a title="fb" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/people/XWEN/61550094961337/"><i class="fa fa-facebook"></i></a>
+                    <a title="inst" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"><i class="fa fa-instagram"></i></a>
+                    <a title="lind" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/in/xwen-94b7a128a/"><i class="fa fa-linkedin"></i></a>
                 </div><!-- End Row -->
             </div><!-- End Container-Flex -->
             <div class="closing container-flex w-100">
@@ -451,8 +449,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="../js/carousel.js"></script>
 <script src="../js/script.js"></script>
 <script src="../js/show_hide.js"></script>
 <script src="../js/chatbot.js"></script>
-
+<script src="../js/contact.js"></script>
