--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
             <div class="menu w-100">
                 <div class="row d-flex align-items-center py-4 px-lg-5">
                     <!-- Logo -->
-                    <img class="logo" src="../pictures/logo-white.png" alt="logo">
+                    <a href='./index.html'><img class="logo" src="../pictures/logo-white.png" alt="logo"></a>
                     <!-- <h1 class="text-logo col-lg-1 py-1">XWEN</h1> -->
                     <ul class="menu-items row py-2 mx-2">
                         <li class="menu-item mx-3"><a title="home" class="link" href=#>Home</a></li>
@@ -82,11 +82,11 @@
                         </div><!-- End Bot-Text -->
                         <div class="bot-text container-flex">
                             <p class="text-light py-2 px-2">
-                                Lets talk business, what kind of website you are looking for?
+                                Lets talk business, what kind of service you are looking for?
                             </p>
                         </div><!-- End Bot-Text -->
                     </div><!-- End Col -->
-                    <form class="chat-form py-2 px-2">
+                    <form class="chat-form py-2 px-2" action="#">
                         <input class="py-2" type="text" id="msg" placeholder="type your message">
                     </form><!-- End Chat-Form -->
                     <button class="chat-submit mx-2" title="submit" id="msg-submit" onclick="read_input()"><i class="fa fa-paper-plane py-1"></i></button>
@@ -227,7 +227,7 @@
                     <img src="../pictures/wordpress.png" alt="wordpress">
                 </div>
                 <div class="slider-img col-lg-2">
-                    <img src="../pictures/css.png" alt="css">
+                    <img src="../pictures/php.png" alt="css">
                 </div>
              </div><!-- End Slider -->
            </div><!-- End Container-FLex -->
@@ -312,7 +312,7 @@
                             <h3 class="py-2">Category:</h3>
                             <p class="py-1">Web Dev: Portfolio</p>
                             <h3 class="py-2">Status:</h3>
-                            <p class="py-1">Completed</p>
+                            <p class="py-1">On Going</p>
                             <h3 class="py-2">Techs:</h3>
                             <p class="py-1">HTML, CSS</p>
                             <h3 class="py-2">Link:</h3>
@@ -350,7 +350,7 @@
                         <div class="project-detail col-lg-12">
                             <h3 class="py-2">Koha API Module</h3>
                             <p class="py-2">
-                                Module to GET data from the koha web api, this module deals with authenticating users, routings andfiltering api response.
+                                Module to GET data from the koha web api, this module deals with authenticating users, routings and filtering api response.
                             </p>
                             <h3 class="py-2">Category:</h3>
                             <p class="py-1">Web Dev: Module</p>
